# Evolution

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build_vars.txt  main.c
AgglomerativeClustering/: AgglomerativeClustering.cpp  AgglomerativeClustering.h  AgglomerativeClustering.hpp  Cluster.cpp  Cluster.hpp  DistanceManager.cpp  DistanceManager.hpp
Console/: CMakeLists.txt  main.c
DeathManager/: DeathManager.c  DeathManager.h
EvolutionLib/: CMakeLists.txt  Common.c  Common.h  EvolutionLib.c  EvolutionLib.h  math_vector.c  math_vector.h
EvolutionLib/AgglomerativeClustering/: AgglomerativeClustering.cpp  AgglomerativeClustering.h  Cluster.cpp  Cluster.hpp  DistanceManager.cpp  DistanceManager.hpp
EvolutionLib/DeathManager/: DeathManager.c  DeathManager.h
EvolutionLib/Entity/: CrossoverLib.h  Crossovers.c  Crossovers.h  Entity.c  Entity.h
EvolutionLib/Functions/: TestFunctions.c  TestFunctions.h
EvolutionLib/GeneticAlgorithm/: GAFwd.h  GALib.c  GALib.h  GAObjective.h  GAOperators.c  GAOperators.h  GAParameters.h  GeneticAlgorithm.c  GeneticAlgorithm.h  OperatorsSwitch.h  OperatorsSwitchDef.h  World.c  World.h
EvolutionLib/GeneticAlgorithm/GAOperators/: GADefaultOperators.c  GADefaultOperators.h  GAOperators.c  GAOperators.h
EvolutionLib/GeneticAlgorithm/Lib/: Clustering.c  Clustering.h  Crossover.c  Crossover.h  Mutation.c  Mutation.h  Operators.h  Selection.c  Selection.h  Utils.c  Utils.h
EvolutionLib/Journal/: Journal.c  Journal.h
EvolutionLib/List/: List.c  List.h  ListTests.c  ListTests.h
EvolutionLib/Logging/: Logging.c  Logging.h
EvolutionLib/OPTICS/: OpticsObject.h  OpticsObjectsManager.cpp  OpticsObjectsManager.h  OrderedSeeds.cpp  OrderedSeeds.h  PrioritizedQueue.h  optics.cpp  optics.h
EvolutionLib/PluginManager/: PluginManager.c  PluginManager.h
EvolutionLib/Species/: Species.c  Species.h
EvolutionLib/Threads/: ThreadTests.c  ThreadTests.h  Threads.c  Threads.h
EvolutionLib/Wishart/: Wishart.c  Wishart.h  WishartTest.c  WishartTest.h
EvolutionTests/: CMakeLists.txt  TestsCommon.cpp  TestsCommon.h
EvolutionTests/AgglomerativeClustering/: ClusterTests.cpp
EvolutionTests/Entity/: CrossoverTests.cpp  EntityTests.cpp
EvolutionTests/List/: ListTests.cpp
EvolutionTests/OPTICS/: OpticsTests.cpp
EvolutionTests/Species/: SpeciesTests.cpp
EvolutionTests/Wishart/: WishartTests.cpp  wh.py
EvolutionTests/Wishart/data/: fisher_iris.txt
GUI/: .gitignore  CMakeLists.txt  EvolutionLib  EvolutionTests  IterationInfo.h  main.cpp
GUI/EvolutionWidget/: EvolutionWidget.cpp  EvolutionWidget.h  EvolutionWorker.cpp  EvolutionWorker.h
GUI/MainWindow/: MainWindow.cpp  MainWindow.h
GUI/Resources/: resources.qrc
GUI/ToolsWidgets/: CustomChartView.cpp  CustomChartView.h  GraphWidget.cpp  GraphWidget.h  LauncherWidget.cpp  LauncherWidget.h  SettingsWidget.cpp  SettingsWidget.h
GUI/Utils/: Utils.cpp  Utils.h
GeneticAlgorithm/: Entity.c  Entity.h  GeneticAlgorithm.c  GeneticAlgorithm.h  Header.h  Lib.c  Lib.h  Main.c  Simulation.c  Simulation.h  Species.c  Species.h  TestFunctions.c  TestFunctions.h
List/: List.c  List.h  ListTests.c  ListTests.h
Logging/: Logging.c  Logging.h
Plugins/: CMakeLists.txt
Plugins/Objectives/: Ackley.c  CMakeLists.txt  DeJongF1.c  DeJongF2.c  DeJongF3.c  DeJongF4.c  DeJongF5.c  EggHolder.c  Griewangk.c  Pathological.c  Rana.c  Rastrigin.c  Schwefel.c  StretchedVSineWave.c
Plugins/Operators/: BestWorstPenalty.c  CMakeLists.txt  Herrera.c  HerreraClustering.c  Herrera_s_Clustering_s_RandomLinks.c  PenaltyClustering.c  RandomLinks.c  ScatteringClustering.c  ScatteringPenaltyClustering.c
StatAnalyzer/: Analyzer.py  Common.py  Plotter.py  analyzer.py  plotter.py
StatAnalyzer/Distrs/: BaseDistr.py  Normal.py  __init__.py
TestInputs/: 12_fisher_iris.data  24_fisher_iris.data  6_fisher_iris.data
Threads/: ThreadTests.c  ThreadTests.h  Threads.c  Threads.h
Wishart/: Fisher_iris.data  Wishart.c  Wishart.h  WishartTest.c  WishartTest.h
